--- a/中学辅导资料推荐清单.md
+++ b/中学辅导资料推荐清单.md
@@ -1,5 +1,88 @@
-### 七年级上册资料清单 ###
+##### 七年级上册资料清单 
+- 语文
+  - 《教材完全解读.语文.人教版》
+- 数学
+  -  《教材完全解读.数学.北师大版》
+- 英语
+  -  《教材完全解读.英语.人教版》
+  -  《星火英语.初中语法全解及全练》
+ ---------------------------
+##### 七年级下册资料清单 
+- 语文
+  - 《教材完全解读.语文.人教版》
+- 数学
+  -  《教材完全解读.数学.北师大版》
+  -  《五年中考三年模拟.数学.北师大版》
+- 英语
+  -  《教材完全解读.英语.人教版》
+  -  《星火英语.七年级英语完形填空和阅读理解》
 
-* 语文: 
-* 数学:
-* 英语:
+---------------------------
+##### 八年级上册资料清单
+- 语文
+  - 《教材完全解读.语文.人教版》
+- 数学
+  -  《尖子生学案.数学.北师大版》
+  -  《五年中考三年模拟.数学.北师大版》
+- 英语
+  -  《教材完全解读.英语.人教版》
+  -  《星火英语.八年级英语完形填空和阅读理解》
+  -  《星火英语.初中词汇图解版》
+- 物理 
+  -  《尖子生学案.物理.人教版》
+  -  《五年中考三年模拟.物理.人教版》
+
+---------------------------
+##### 八年级下册资料清单
+- 语文
+  - 《教材完全解读.语文.人教版》
+- 数学
+  -  《尖子生学案.数学.北师大版》
+  -  《五年中考三年模拟.数学.北师大版》
+- 英语
+  -  《教材完全解读.英语.人教版》
+  -  《星火英语.听力.巅峰训练》
+- 物理 
+  -  《尖子生学案.物理.人教版》
+  -  《五年中考三年模拟.物理.人教版》
+
+---------------------------
+##### 九年级全学期资料清单
+- 语文
+  - 《教材完全解读.语文.人教版》
+  - 《语文基础知识手册.薛金星版》
+- 数学
+  -  《尖子生学案.数学.北师大版》
+  -  《五年中考三年模拟.数学.北师大版》
+- 英语
+  -  《教材完全解读.英语.人教版》
+  -  《星火英语.九年级阅读理解和完型填空》
+- 物理 
+  -  《尖子生学案.物理.人教版》
+  -  《五年中考三年模拟.物理.人教版》
+-  化学 
+  -  《尖子生学案.化学.人教版》
+  -  《五年中考三年模拟.化学.人教版》
+- 综合
+  -  《五年中考三年模拟七科全套》
+  -  《多功能题典.中学数学》
+  
+
+---------------------------
+```
+初升高假期选修资料:《多功能题典.中学数学.竞赛版》
+```
+ ---------------------------
+
+#### 高中资料推荐表
+* 《教材完全解读系列》
+* 《五年高考三年模拟系列》
+* 《星火英语系列》
+* 《语文基础手册.薛金星》
+* 《更高更妙系列》
+* 《知识清单系列》
+* 《多功能题典系列》
+* 《高考数学你真的掌握了吗》
+
+---------------------------
+
